@@ -126,7 +126,8 @@ show_hp_sp_gain: yes
 
 // If set, when A accepts B as a friend, B will also be added to A's friend 
 // list, otherwise, only A appears in B's friend list.
-friend_auto_add: no
+// NOTE: this setting only enables friend auto-adding; auto-deletion does not work yet
+friend_auto_add: yes
 
 // Are other requests accepted during [various things[party,guild]] a request or not?
 // It does not accept by no accepted by yes.
